Fri Jun 25 03:02:36 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/Quoter/Simple/Model/Quoter.xme:

          Updated artifact location to be consistent with the
          current state of the CIAO tutorial.
          
Fri Jun 25 01:47:39 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/Quoter/Simple/03.html:
        * tutorials/Quoter/Simple/Model/Quoter.xme:
        * tutorials/Quoter/Simple/images/fig10.jpg:
        * tutorials/Quoter/Simple/images/fig11.jpg:
        * tutorials/Quoter/Simple/images/fig12.jpg:
        * tutorials/Quoter/Simple/images/fig2.jpg:
        * tutorials/Quoter/Simple/images/fig3.jpg:
        * tutorials/Quoter/Simple/images/fig4.jpg:
        * tutorials/Quoter/Simple/images/fig5.jpg:
        * tutorials/Quoter/Simple/images/fig6.jpg:
        * tutorials/Quoter/Simple/images/fig6a.jpg:
        * tutorials/Quoter/Simple/images/fig7.jpg:

          Updated CoSMIC portion of StockQuoter tutorial.

        * tutorials/Quoter/Simple/images/fig5a.jpg:

          Removed this file.

Thu Jun 24 19:01:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDSDataReaderListener_T.cpp:
          Removed all code for possible other DDS vendors, integrating more
          vendors should be done using C++ template specialization instead
          of hacking it into the methods for RTI DDS. This is now possible
          because the core library is now a big C++ templated library, for
          each vendor we can define a C++ template specialization

Thu Jun 24 18:57:22 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:
          Fixed typo in debug messages

        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_pub.cdp:
        * connectors/dds4ccm/performance-tests/Throughput/descriptors/Plan_sub.cdp:
          Fixed invalid entry points
